# A1_MCDA_5511

./: MCDA5511-classmates - 2025 - modified.csv  README.md  b_top5_matches.json  b_top5_matches_modified.json  c_complex_viz.html  c_simple_viz.html  conda.yaml  data_comparison.py  embeddings_all-MiniLM-L6-v2.json  embeddings_all-distilroberta-v1.json  embeddings_mpnet.json  embeddings_paraphrase-MiniLM-L6-v2.json  function_app.py  hello.py  main.py  main2.py  main3.py  model_comparison.py  model_comparison2.py  model_comparison3.py  model_comparison_main.py  person_embeddings.csv  person_embeddings_modified.csv  pyproject.toml  req.txt  requirements.txt  score.py  visualizer.ipynb  visualizer.py
embeddings/: person_embeddings.csv  person_embeddings_antonym.csv  person_embeddings_rephrase.csv  person_embeddings_synonym.csv
source_data/: MCDA5511-classmates - 2025 - antonym.csv  MCDA5511-classmates - 2025 - rephrase.csv  MCDA5511-classmates - 2025 - synonym.csv  MCDA5511-classmates - 2025.csv
