[project]
name = "a1-mcda-5511"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"umap-learn",
    "scipy",
    "scikit-learn",
    "sentence-transformers",
    "matplotlib",
    "pyvis",
    "numpy",
    "seaborn",
    "branca",
    "pandas",
    "numba>=0.56.4" 



]
